feat: mark definition draining instead of rejecting delete with running instances
Deleting a process definition that still had running instances was
rejected with INVALID_STATE, forcing callers to wait and retry. Instead,
accept the delete and drain: mark the definition DRAINING so it stops
accepting new instances, and finalize the physical deletion once the
last running instance completes.

Behavior:
- With running instances, the definition enters DRAINING (banned
  instances are excluded from the active-instance check, as they never
  complete). Finalization happens later, driven by instance completion.
- With no running instances, the deletion finalizes immediately
  (DELETING/DELETED + DELETE_COMPLETE) in the same processing.
- A second delete of an already-draining definition is rejected as
  INVALID_STATE, since only an ACTIVE version is deletable.
- The start-event subscription is handed down to the latest ACTIVE
  version below the deleted one, skipping DRAINING/deleted versions,
  which must stay unsubscribed so they reject new instances.

Cross-partition aggregation: the delete freezes the desired partition
set onto the DRAINING record via RoutingInfo. On the deployment
partition the applier seeds one pending-deletion entry per frozen
partition; each DELETE_COMPLETE report clears one, and the definition
becomes FULLY_DELETED once none remain. Delete-time history purge is
skipped while a drain is in flight (locally or elsewhere) so it cannot
purge instances mid-drain; draining history is deleted via the
FULLY_DELETED path instead.

Distributed deletes are now acknowledged even on rejection, otherwise
the distribution never finishes and head-of-line blocks every command
queued behind it. The old ActiveProcessInstancesException path is
removed.

Wires RoutingInfo and ProcessDefinitionMetrics through EngineProcessors
and BpmnBehaviorsImpl to reach the delete processor and the drain
finalizer.

(cherry picked from commit bc530e3bb1985d1e98c52798c59ec0db8304bcfb